--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/podman_mount.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/podman_mount.yml
@@ -3,7 +3,7 @@
 # Tasks to be run when the backend_app code is made available on the target machine
 # via a vagrant mount from the host machine (i.e. when using a dev VM).
 #
-# The Vagrantfile has been configured to mount the 'current' folder on the target
+# The podman compose.yaml has been configured to mount the 'current' folder on the target
 # machine to the 'backend_app' folder on the host machine, so we don't need to do
 # anything else to make any code changes available on the target machine (compare to
 # the tasks in 'run_deploy.yml').
