--- a/{{ cookiecutter.project_slug }}/frontend_app/package.json
+++ b/{{ cookiecutter.project_slug }}/frontend_app/package.json
@@ -17,9 +17,9 @@
     "web-vitals": "^3.1.1"
   },
   "scripts": {
-    "start": ". ./set_dev_env_vars.sh && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": ". ./set_dev_env_vars.sh && react-scripts test",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier": " prettier --write \"src/**/*.{js,jsx,ts,tsx}\""
   },
