Add react + vite + typescript starter template.

--- a/{{ cookiecutter.project_slug }}/frontend_app/.env.development
+++ b/{{ cookiecutter.project_slug }}/frontend_app/.env.development
@@ -1,5 +1,5 @@
 # Set the default value for the backend url environment variable to point to
 # the backend app in the 'dev' environment being served by Nginx. You can
-# override this by setting the REACT_APP_BACKEND_URL environment variable.
+# override this by setting the VITE_BACKEND_URL environment variable.
 
-REACT_APP_BACKEND_URL=https://localhost:4000
+VITE_BACKEND_URL=https://localhost:4000
