--- a/{{ cookiecutter.project_slug }}/.gitignore
+++ b/{{ cookiecutter.project_slug }}/.gitignore
@@ -9,6 +9,6 @@ __pycache__/
 /backend_app/coverage_html_report/
 /backend_app/geckodriver.log
 /frontend_app/node_modules/
-/frontend_app/build/
+/frontend_app/dist/
 /frontend_app/npm-debug.log*
 /other_tools/testssl.sh/
