--- a/{{ cookiecutter.project_slug }}/provisioning/roles/frontend_app/tasks/build.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/frontend_app/tasks/build.yml
@@ -10,7 +10,7 @@
   args:
     chdir: "{{ playbook_dir }}/../frontend_app/"
   environment:
-    REACT_APP_BACKEND_URL: "{{ frontend_app_backend_url }}"
+    VITE_BACKEND_URL: "{{ frontend_app_backend_url }}"
   changed_when: true
 
 # Note that this doesn't fail the playbook if vulnerable packages are found.
