Update task for installing rsync.

--- a/{{ cookiecutter.project_slug }}/provisioning/roles/frontend_app/tasks/main.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/frontend_app/tasks/main.yml
@@ -4,7 +4,7 @@
 # for more info.
 
 - name: Install rsync
-  ansible.builtin.command.apt:
+  ansible.builtin.apt:
     name: rsync
     state: present
 
