Update use of deprecated ansible yaml plugin.

--- a/{{ cookiecutter.project_slug }}/provisioning/ansible.cfg
+++ b/{{ cookiecutter.project_slug }}/provisioning/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 host_key_checking = yes
 callbacks_enabled = timer, profile_roles
-stdout_callback = yaml
+callback_result_format = yaml
 force_color = yes
 any_errors_fatal = yes
 
