Set explicit ansible interpreter python version.

--- a/{{ cookiecutter.project_slug }}/provisioning/ansible_podman.cfg
+++ b/{{ cookiecutter.project_slug }}/provisioning/ansible_podman.cfg
@@ -1,4 +1,5 @@
 [defaults]
+interpreter_python = /usr/bin/python3.12
 host_key_checking = no
 callbacks_enabled = timer, profile_roles
 callback_result_format = yaml
