Switch to installing backend dependencies with uv.

--- a/{{ cookiecutter.project_slug }}/.gitignore
+++ b/{{ cookiecutter.project_slug }}/.gitignore
@@ -4,7 +4,7 @@ __pycache__/
 /.idea/*
 /provisioning/galaxy_roles/
 /backend_app/settings.env
-/backend_app/venv/
+/backend_app/.venv/
 /backend_app/static_root/
 /backend_app/coverage_html_report/
 /backend_app/geckodriver.log
