--- a/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/collect_static.yml
+++ b/{{ cookiecutter.project_slug }}/provisioning/roles/backend_app/tasks/collect_static.yml
@@ -7,7 +7,7 @@
     command: "collectstatic"
     clear: true
     app_path: "{{ backend_app_deploy_helper.new_release_path }}"
-    virtualenv: "{{ backend_app_virtualenv_dir }}"
+    virtualenv: "{{ backend_app_deploy_helper.current_path }}/.venv/"
   register:
     django_manage_collectstatic
 
