Switch to installing provisioning dependencies with uv.

--- a/{{ cookiecutter.project_slug }}/Dockerfile
+++ b/{{ cookiecutter.project_slug }}/Dockerfile
@@ -12,6 +12,7 @@ RUN apt update -y \
     libssl-dev \
     openssh-client \
     openssh-server \
+    pipx \
     python3-debian \
     python3-dev \
     python3-pip \
@@ -20,20 +21,24 @@ RUN apt update -y \
     sudo \
     systemd \
     systemd-sysv
+RUN pipx install uv==0.8.0
 # Create a shared ssh key for ansible provisioning.
 # This image is used for each container, so the ansible 'provisioner' container is able to ssh onto the other containers.
 RUN mkdir -p /root/.ssh && \
     ssh-keygen -t rsa -b 4096 -f /root/.ssh/id_rsa -N "" && \
     cp /root/.ssh/id_rsa.pub /root/.ssh/authorized_keys && chmod 600 /root/.ssh/authorized_keys
+WORKDIR /workdir/provisioning/
 # Copy Python requirements for Ansible provisioning
-COPY provisioning/requirements.txt provisioning/requirements.txt
-# Create Ansible Python virtual environment and install required packages
-RUN python3.12 -m venv ~/provision_venv --system-site-packages && \
-    ~/provision_venv/bin/pip install pip==25.0 wheel==0.44.0 setuptools==80.9.0 && \
-    ~/provision_venv/bin/pip install -r provisioning/requirements.txt
+COPY provisioning/pyproject.toml pyproject.toml
+COPY provisioning/uv.lock uv.lock
+# Create Ansible Python virtual environment and install required packages.
+# We avoid using the standard .venv directory with uv to ensure this
+# is still available when setting a bind mount on this directory.
+RUN UV_PROJECT_ENVIRONMENT=~/provision_venv/ ~/.local/bin/uv venv --system-site-packages && \
+    UV_PROJECT_ENVIRONMENT=~/provision_venv/ ~/.local/bin/uv sync
 # Copy Ansible Galaxy requirements file
-COPY provisioning/requirements.yml provisioning/requirements.yml
+COPY provisioning/requirements.yml requirements.yml
 # Install Ansible roles and collections
-RUN ~/provision_venv/bin/ansible-galaxy install -r provisioning/requirements.yml
+RUN ~/provision_venv/bin/ansible-galaxy install -r requirements.yml
 # Start systemd when container launches
 CMD [ "/sbin/init" ]
